codama-syn-helpers/tests-macros/tests/as_path_value/from_path.fail.stderr
error: expected a value for that path: `foo = ...`
 --> tests/as_path_value/from_path.fail.rs:3:17
  |
3 | #[as_path_value(foo)]
  |                 ^^^
